Added filtations to all endpoints
